# dt-model

./: pyproject.toml  pyrightconfig.json
.github/workflows/: test.yml
dt_model/: __init__.py
dt_model/engine/frontend/: graph.py  linearize.py  replace.py
dt_model/engine/numpybackend/: executor.py
dt_model/examples/molveno/: __init__.py  overtourism.py
dt_model/model/: abstract_model.py  instantiated_model.py  legacy_model.py  model.py
dt_model/simulation/: ensemble.py  evaluation.py
dt_model/symbols/: index.py  presence_variable.py
examples/: overtourism_molveno.py  presence_stats.py
tests/engine/frontend/: test_graph.py  test_linearize.py  test_replace.py
tests/engine/numpybackend/: test_executor.py
tests/examples/molveno/: test_overtourism.py
