[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dt-model"
version = "0.0.1"
description = "DigitalTwins Model"
readme = "README.md"
authors = [{ name = "Fondazione Bruno Kessler", email = "dslab@fbk.eu" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = []
requires-python = "==3.11.11"
dependencies = ["sympy", "numpy", "pandas", "scipy"]

[project.urls]
Homepage = "https://github.com/fbk-most/dt-model"

[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[dependency-groups]
dev = ["black>=24.10.0", "pytest>=7.0.0", "pytest-cov>=4.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=dt_model --cov-report=xml --cov-report=term-missing"
