[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dt-model"
version = "0.0.1"
description = "DigitalTwins Model"
readme = "README.md"
authors = [{ name = "Fondazione Bruno Kessler", email = "dslab@fbk.eu" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = []
requires-python = ">=3.11.0"
dependencies = [
    "sympy>=1.13.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "scipy>=1.15.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.1",
    "pyright>=1.1.397",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/fbk-most/dt-model"

[tool.setuptools.packages.find]
where = ["."]
include = ["dt_model*"]
exclude = ["dt_model.examples*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=dt_model --cov-report=xml --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-select = ["W", "Q"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
